Fixed home page responsiveness on iphone5

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ body {
     font-family: "Helvetica Neue", "Helvetica", sans-serif;
     margin: 0px;
     color: white;
+    text-decoration: none;
 }
 
 body::-webkit-scrollbar {
@@ -17,17 +18,11 @@ svg {
     fill: white;
 }
 
-footer {
-    position: relative;
-    bottom: 0;
-}
-
 /* Navigation */
 #nav-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
     width: 100%;
     height: 50px;
     top: 0;
@@ -35,7 +30,7 @@ footer {
     z-index: 1;
 }
 
-.nav-logo-text {
+.nav-logo {
     max-width: 50px;
     width: 50px;
     padding-left: 15px;
@@ -45,7 +40,6 @@ footer {
     list-style: none;
     display: inline-block;
     padding-right: 15px;
-    /* padding-top: 10px; */
 }
 
 .nav-links a {
@@ -66,32 +60,34 @@ footer {
 #main-landing {
     background: url("https://w.wallhaven.cc/full/zm/wallhaven-zm832v.jpg");
     background-size: cover;
-    height: 100vh;
     display: block;
+    min-height: 95vh;
+    box-shadow: inset 0px 0px 0px 2000px rgba(17, 17, 17, 0.603);
 }
 
-#main-transparent-overlay {
-    background-color: rgba(17, 17, 17, 0.603);
-    height: 100vh;
+.main-container {
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    width: 100%;
 }
+
 .main-landing-intro {
     display: flex;
     flex-direction: column;
     align-items: center;
     border: 3px solid white;
-    padding: 0px 10px 50px 10px;
-    margin: 0px 15px 10px 15px;
+    padding: 0px 10px 30px 10px;
+    margin: 40px 15px 10px 15px;
+    min-width: 100px;
+    min-height: 200px;
     max-width: 400px;
     max-height: 500px;
 }
 
 .logo {
-    max-width: 250px;
+    min-width: 250px;
     width: 100%;
     fill: white;
 }
@@ -137,6 +133,7 @@ footer {
     background-color: rgba(24, 24, 24, 0.534);
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 50px;
 }
 
 .social-link svg {
